--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/App.css" />
     <link rel="stylesheet" href="/src/index.css">
-    <title>Vite + React</title>
+    <title style="color: white; background-color: black;">Payment App</title>
   </head>
   <body style="background-color: black;">   
     
